js/js.translator/testData/incremental/invalidation/objectInitializationMoveBetweenFiles/lib1/second.1.kt
object X {
    init {
        result = "A1"
    }

    fun touch() {
    }
}
